welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:2: error: ';' expected but 'true' found.
while (estFaceMur())!=true {
                      ^